# SocialMediaGPT

./: .pre-commit-config.yaml  README.md  pyproject.toml
backend/: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
backend/src/: app.py  data_models.py  llm.py  notion_database.py  prompts.py
backend/tests/: test_llm.py  test_notion_database.py
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js
frontend/src/components/Hero/: Hero.jsx  hero.css
frontend/src/components/Navbar/: Navbar.jsx  navbar.css
frontend/src/components/NotionForm/: NotionForm.jsx  notionform.css
src/: app.py
